--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "http://vno.onevcat.com"
 permalink: /:year/:month/:title/
 
 # Format
-highlighter: green
+highlighter: royalblue
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
 cover_color: 
