--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ blog_button:
 
 # Navigation buttons in the front page.
 nav:
-    
+     - {title: Back, description: Back to cover, url: 'https://www.teaur.com'}
     # - {title: Another Button, description: A button, url: 'http://example.com'}
 
 # Pagination
